[gd_scene load_steps=11 format=3 uid="uid://6lgt51fk3khg"]

[ext_resource type="Script" path="res://Scripts/options_menu.gd" id="1_in42w"]
[ext_resource type="Texture2D" uid="uid://8pntxcrwopv7" path="res://Assets/Art/BG_Space.jpg" id="2_htsm4"]
[ext_resource type="FontFile" uid="uid://behuf74h25j5t" path="res://GameAssets/DynaPuff/DynaPuff-VariableFont_wdth,wght.ttf" id="2_m52pm"]
[ext_resource type="AudioStream" uid="uid://cliqi057lxak6" path="res://Assets/Audio/Music/MainMenuTheme_Ilman_Introa.mp3" id="4_pfqjf"]

[sub_resource type="Theme" id="Theme_avieb"]

[sub_resource type="Theme" id="Theme_2t6o0"]
Label/fonts/font = ExtResource("2_m52pm")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jwn0c"]

[sub_resource type="Theme" id="Theme_gnr1q"]
Button/fonts/font = ExtResource("2_m52pm")
CheckButton/fonts/font = ExtResource("2_m52pm")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/line_spacing = 3
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 16
Label/fonts/font = ExtResource("2_m52pm")
Label/styles/normal = SubResource("StyleBoxEmpty_jwn0c")

[sub_resource type="Theme" id="Theme_lxusg"]
Label/fonts/font = ExtResource("2_m52pm")

[sub_resource type="Theme" id="Theme_o0vlm"]
Button/fonts/font = ExtResource("2_m52pm")
CheckButton/fonts/font = ExtResource("2_m52pm")
Label/fonts/font = ExtResource("2_m52pm")

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_avieb")
script = ExtResource("1_in42w")

[node name="TextBoxColor" type="TextureRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1344.0
offset_top = -756.0
offset_right = 1344.0
offset_bottom = 756.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_htsm4")

[node name="Options" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 170.0
grow_horizontal = 2
theme = SubResource("Theme_2t6o0")
theme_override_font_sizes/font_size = 50
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TextBoxColor" type="ColorRect" parent="Options"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0714, 0.33866, 0.42, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -104.0
offset_right = 150.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="SoundOnOff" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_gnr1q")
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "Sound"
icon_alignment = 1

[node name="TextBoxColor" type="ColorRect" parent="VBoxContainer/SoundOnOff"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_right = 15.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0714, 0.33866, 0.42, 1)

[node name="Volume" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_lxusg")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextBoxColor" type="ColorRect" parent="VBoxContainer/Volume"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_right = 15.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0714, 0.33866, 0.42, 1)

[node name="volume_slider" type="HSlider" parent="VBoxContainer/Volume"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = 2.0
offset_right = 150.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 0
rounded = true

[node name="Return" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = SubResource("Theme_o0vlm")
theme_override_font_sizes/font_size = 40
text = "Return
"

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_pfqjf")
volume_db = -12.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/SoundOnOff" to="." method="_on_sound_on_off_pressed"]
[connection signal="value_changed" from="VBoxContainer/Volume/volume_slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
